feat: add flatten file list api
