# docs/swagger.json
@@ -72,9 +72,9 @@
                 }
             }
         },
-        "/queries": {
+        "/files": {
             "get": {
-                "description": "get queries for a user",
+                "description": "get file list for a user",
                 "consumes": [
                     "application/json"
                 ],
@@ -82,16 +82,16 @@
                     "application/json"
                 ],
                 "tags": [
-                    "queries"
+                    "files"
                 ],
-                "summary": "Get Queries",
+                "summary": "Get File List",
                 "responses": {
                     "200": {
-                        "description": "Returns user queries",
+                        "description": "Returns user file list",
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/main.Query"
+                                "$ref": "#/definitions/main.File"
                             }
                         }
                     },
@@ -255,17 +255,22 @@
                 }
             }
         },
-        "main.Query": {
+        "main.File": {
             "type": "object",
-            "required": [
-                "name",
-                "query"
-            ],
             "properties": {
+                "children": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/main.File"
+                    }
+                },
                 "name": {
                     "type": "string"
                 },
-                "query": {
+                "path": {
+                    "type": "string"
+                },
+                "type": {
                     "type": "string"
                 }
             }
